2010-08-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-svaveToFile:saveOperation:delegate:...,
	-saveToURLofType:forSaveOperation:...): Update the document
	controller's recent document list. This means that the user will
	find her fresh documents in that list after saving them.

2010-08-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSDocument.h:
	* Source/NSDocument.m: Change result type of method
	-saveToURL:ofType:forSaveOperation:delegate:didSaveSelector:contextInfo:
	from BOOL to void. This fixes an incompatibility with Cocoa where
	this method has no result (as any other method receiving a
	callback selector).

2010-08-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextField.m (-selectText:): Add special case to
	preserve the current X selection when editing is started with a
	mouse click.

	* Source/NSSpellChecker.m (-awakeFromNib): Make the spell panel a
	utility window like the font and color panels.

	* Source/NSPopUpButtonCell.m (-selectItem): Fix bug caused by the
	fix for #30025, which made it impossible to programmatically
	change the selected item of some pop up buttons.

	* Source/NSComboBoxCell.m (-runLoopWithComboBoxCell:): Dismiss
	the combo box's list without changing the selection when the user
	presses Escape.

2010-08-13 Riccardo Mottola

	* Source/NSMatrix.m
	cleaned up code

2010-08-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSComboBox.m (-textView:doCommandBySelector:): New
	override to pop up the combo box's list when the user presses
	the down arrow key.
	* Source/NSComboBoxCell.m (_performClickWithFrame:inView:):
	Remember the cell's control view.

2010-08-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-setPullsDown:): Call
	synchronizeTitleAndSelectedItem to display the correct item.
	* Source/NSPopUpButtonCell.m (-setMenu:): Listen to notifications
	from the menu to call synchronizeTitleAndSelectedItem, when the
	menu items change.
